# python-package-template

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci-quality.yaml
notebooks/: example_notebook.ipynb
src/package_name/: package_code_file.py  profiler.py
src/package_name/training/: mlflow_tracker.py
tests/: test_mlflow_tracker.py  test_package.py
