# "src/" layout + setuptools + version from git tags via setuptools_scm.
# Installs runtime deps from requirements.txt (see note below).

[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-name"                 # TODO: replace
description = "Short description"     # TODO: replace
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]    # TODO: replace
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Pull runtime requirements from requirements.txt
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Optional: define a test extra (recommended for tox's `extras = test`)
# Put these in requirements-test.txt, or inline them here if you prefer.
optional-dependencies.test = { file = ["requirements-test.txt"] }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^(?:v)?(?P<version>\\d+(?:\\.\\d+)+)$"

# ---- Tool configs (optional; you can keep them in tox.ini instead) ----

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"