[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-name"                 # TODO: replace
description = "Short description"     # TODO: replace
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]    # TODO: replace
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^(?:v)?(?P<version>\\d+(?:\\.\\d+)+)$"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.interrogate]
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-module = true
ignore-private = true
exclude = ["tests"]
fail-under = 20
verbose = 1
